# fast_check

./: Cargo.toml  README.md
src/: cli.rs  load.rs  main.rs  rule.rs
